# trivialsec-trivialscan-subdomain-queue

./: .env  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  subdomain-queue.code-workspace
.development/: invoke-payload.json
.local/: invoke-payload.json
plans/: Dev-backend.conf  Prod-backend.conf  _locals.tf  _secrets.tf  _vars.tf  iam.tf  lambda.tf  outputs.tf  remotes.tf  sqs.tf
src/: amass.ini  app.py  internals.py  models.py  run.py
src/services/: aws.py  webhook.py
